--- a/entitygen/src/main/resources/context.yaml
+++ b/entitygen/src/main/resources/context.yaml
@@ -3,7 +3,7 @@ context:
   - login: com.developmentontheedge.be5.modules.core.components.Login
   - logout: com.developmentontheedge.be5.modules.core.components.Logout
   services:
-  - com.developmentontheedge.be5.modules.core.generate.TestBe5appEntityModels
+  - com.developmentontheedge.be5.entitygen.generate.EntityGenEntityModels
 config:
   com.developmentontheedge.be5.api.services.impl.LogConfigurator:
     path: '/logging.properties'
