move checkDpsContainNotNullColumns to DpsHelper and add to addForce(), fix check order

--- a/server/src/test/resources/src/meta/entities/meters.yaml
+++ b/server/src/test/resources/src/meta/entities/meters.yaml
@@ -15,12 +15,16 @@ meters:
         type: SMALLINT
     - modificationDate___:
         type: TIMESTAMP
+        canBeNull: true
     - creationDate___:
         type: TIMESTAMP
+        canBeNull: true
     - whoModified___:
         type: VARCHAR(100)
+        canBeNull: true
     - whoInserted___:
         type: VARCHAR(100)
+        canBeNull: true
     - isDeleted___:
         type: ENUM('no','yes')
         defaultValue: '''no'''
