--- a/server/context.yaml
+++ b/server/context.yaml
@@ -16,6 +16,7 @@ context:
   - com.developmentontheedge.be5.api.validation.Validator
   - com.developmentontheedge.be5.api.helpers.OperationHelper
   - com.developmentontheedge.be5.api.services.Be5Caches
+  - com.developmentontheedge.be5.api.services.impl.GroovyOperationLoader
   - be5MainSettings:
       interface:      com.developmentontheedge.be5.api.services.Be5MainSettings
       implementation: com.developmentontheedge.be5.api.services.impl.Be5MainSettingsImpl
