--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
   <module>server</module>
   <module>maven</module>
   <module>entitygen</module>
+  <module>wizard</module>
   <module>modules/core</module>
  </modules>
 
