add QueryBuilder - to _system_

--- a/modules/core/src/meta/entities/_system_.yaml
+++ b/modules/core/src/meta/entities/_system_.yaml
@@ -41,6 +41,10 @@ _system_:
       type: Groovy
       roles: [SystemDeveloper, Administrator]
       file: DataSource.groovy
+  - Query Builder:
+      type: static
+      roles: [SystemDeveloper, Administrator]
+      value: qBuilder
   operations:
   - SessionVariablesEdit:
       type: Groovy
