--- a/server/context.yaml
+++ b/server/context.yaml
@@ -10,6 +10,7 @@ context:
   - static:           com.developmentontheedge.be5.components.StaticPageComponent
   - categories:       com.developmentontheedge.be5.components.Categories
   - queryBuilder:     com.developmentontheedge.be5.components.QueryBuilder
+  - download:         com.developmentontheedge.be5.components.DownloadComponent
   services:
   - com.developmentontheedge.be5.api.services.impl.LogConfigurator
   - com.developmentontheedge.be5.databasemodel.impl.DatabaseModel
