--- a/entitygen/src/test/resources/context.yaml
+++ b/entitygen/src/test/resources/context.yaml
@@ -3,7 +3,8 @@ context:
   - login: com.developmentontheedge.be5.modules.core.components.Login
   - logout: com.developmentontheedge.be5.modules.core.components.Logout
   services:
-  - com.developmentontheedge.be5.entitygen.generate.EntityGenEntityModels
+  - com.developmentontheedge.be5.entitygen.experimental.genegate.CoreEntityModels
+  - com.developmentontheedge.be5.experimental.entitygen.generate.EntityGenEntityModels
 config:
   com.developmentontheedge.be5.api.services.impl.LogConfigurator:
     path: '/logging.properties'
