add injectAnnotatedFields to getComponent(componentId)

--- a/server/src/test/resources/context.yaml
+++ b/server/src/test/resources/context.yaml
@@ -1,4 +1,6 @@
 context:
+  components:
+  - testComponentWithInjectAnnotation: com.developmentontheedge.be5.env.impl.testComponents.TestComponentWithInjectAnnotation
   services:
   - com.developmentontheedge.be5.env.impl.testServices.AService
   - com.developmentontheedge.be5.env.impl.testServices.BService
