--- a/server/src/test/resources/src/meta/entities/testTags.yaml
+++ b/server/src/test/resources/src/meta/entities/testTags.yaml
@@ -50,7 +50,7 @@ testTags:
         FROM testTags
         WHERE 1=1
         <if parameter="payable">
-          AND payable = <parameter:payable/>
+          AND payable = '<parameter:payable/>'
         </if>
   operations:
   - Delete:
