--- a/server/src/test/resources/src/meta/entities/testtable.yaml
+++ b/server/src/test/resources/src/meta/entities/testtable.yaml
@@ -47,3 +47,30 @@ testtable:
                </sql>' AS "testtUserValues"
             FROM
               testtable t
+  - TestResolveRefColumn:
+      type: 1D_unknown
+      invisible: true
+      roles: '@AllRoles'
+      code: |-
+        SELECT *
+        FROM testtable
+        WHERE 1=1
+          AND name = <parameter:name refColumn="testtable.name" />
+  - TestResolveRefColumnIllegalAE:
+      type: 1D_unknown
+      invisible: true
+      roles: '@AllRoles'
+      code: |-
+        SELECT *
+        FROM testtable
+        WHERE 1=1
+          AND name = <parameter:name refColumn="public.testtable.name" />
+  - TestResolveRefColumnNPE:
+      type: 1D_unknown
+      invisible: true
+      roles: '@AllRoles'
+      code: |-
+        SELECT *
+        FROM testtable
+        WHERE 1=1
+          AND name = <parameter:name refColumn="testtable.unnounColumn" />
