use version range

--- a/metadata/pom.xml
+++ b/metadata/pom.xml
@@ -25,7 +25,7 @@
 		<dependency>
 			<groupId>com.developmentontheedge</groupId>
 			<artifactId>beans</artifactId>
-			<version>3.0.2</version>
+			<version>[3.0,)</version>
 		</dependency>
 
 		<dependency>
