refactoring DocumentGenerator to service

--- a/server/context.yaml
+++ b/server/context.yaml
@@ -58,3 +58,6 @@ context:
   - operationExecutor:
       interface:      com.developmentontheedge.be5.api.services.OperationExecutor
       implementation: com.developmentontheedge.be5.api.services.impl.OperationExecutorImpl
+  - documentGenerator:
+      interface:      com.developmentontheedge.be5.components.DocumentGenerator
+      implementation: com.developmentontheedge.be5.components.impl.DocumentGeneratorImpl
