fix tests, move applyFilters() before applyContext()

--- a/server/src/test/resources/src/meta/entities/testtable.yaml
+++ b/server/src/test/resources/src/meta/entities/testtable.yaml
@@ -73,4 +73,4 @@ testtable:
         SELECT *
         FROM testtable
         WHERE 1=1
-          AND name = <parameter:name refColumn="testtable.unnounColumn" />
+          AND name = <parameter:name refColumn="testtable.unknownColumn" />
