--- a/entitygen/pom.xml
+++ b/entitygen/pom.xml
@@ -50,7 +50,7 @@
                             <arguments>
                                 <argument>${project.build.directory}/generated-test-sources/java/</argument>
                                 <argument/>
-                                <argument>EntityGen</argument>
+                                <argument>${project.artifactId}</argument>
                             </arguments>
                         </configuration>
                     </execution>
