--- a/server/src/test/resources/logging.properties
+++ b/server/src/test/resources/logging.properties
@@ -1,6 +1,6 @@
 handlers= java.util.logging.ConsoleHandler
-.level=FINE
-java.util.logging.ConsoleHandler.level=FINE
+#.level=FINE
+#java.util.logging.ConsoleHandler.level=FINE
 
 
 #handlers = java.util.logging.FileHandler
