refactoring Login and Logout to be5 operations, remove unused BootstrapModal

--- a/modules/core/src/meta/entities/users.yaml
+++ b/modules/core/src/meta/entities/users.yaml
@@ -47,3 +47,11 @@ users:
   - Insert:
       roles: Administrator
       code: com.developmentontheedge.be5.operations.InsertOperation
+  - Login:
+      roles: Guest
+      type: Groovy
+      file: users/Login.groovy
+  - Logout:
+      roles: '@AllRolesExceptGuest'
+      type: Groovy
+      file: users/Logout.groovy
