--- a/modules/core/src/meta/entities/users.yaml
+++ b/modules/core/src/meta/entities/users.yaml
@@ -26,6 +26,7 @@ users:
       - Delete
       - Edit
       - Insert
+      - Filter
       code: |-
         SELECT
           u.user_name AS "___ID",
@@ -47,11 +48,14 @@ users:
   - Insert:
       roles: Administrator
       code: com.developmentontheedge.be5.operations.InsertOperation
+  - Filter:
+      roles: Administrator
+      code: com.developmentontheedge.be5.operations.FilterOperation
   - Login:
       roles: Guest
       type: Groovy
       file: users/Login.groovy
   - Logout:
-      roles: '@AllRolesExceptGuest'
+      roles: '@AllRoles'
       type: Groovy
       file: users/Logout.groovy
