--- a/modules/core/src/meta/entities/users.yaml
+++ b/modules/core/src/meta/entities/users.yaml
@@ -40,14 +40,14 @@ users:
   - Delete:
       records: 2
       roles: Administrator
-      code: com.developmentontheedge.be5.operations.DeleteOperation
+      code: com.developmentontheedge.be5.operations.SilentDeleteOperation
   - Edit:
-      records: 2
+      records: 1
       roles: Administrator
-      code: com.developmentontheedge.be5.operations.EditOperation
+      code: com.developmentontheedge.be5.operations.SilentEditOperation
   - Insert:
       roles: Administrator
-      code: com.developmentontheedge.be5.operations.InsertOperation
+      code: com.developmentontheedge.be5.operations.SilentInsertOperation
   - Filter:
       roles: Administrator
       code: com.developmentontheedge.be5.operations.FilterOperation
