refactor Entity entity -> BeModelElement modelElements support localization for Operation, Query

--- a/server/src/test/resources/src/meta/entities/testTags.yaml
+++ b/server/src/test/resources/src/meta/entities/testTags.yaml
@@ -52,6 +52,12 @@ testTags:
         <if parameter="payable">
           AND payable = '<parameter:payable/>'
         </if>
+  - TestLocalizQuery:
+      type: 1D_unknown
+      roles: '@AllRoles'
+      code: |-
+        SELECT *
+        FROM testTags
   operations:
   - Delete:
       records: 2
