--- a/server/src/test/resources/src/meta/entities/testtable.yaml
+++ b/server/src/test/resources/src/meta/entities/testtable.yaml
@@ -17,12 +17,16 @@ testtable:
   - All records:
       type: 1D_unknown
       roles: '@AllRoles'
+      operations:
+      - Edit
+      - Insert
+      - CustomOperation
       code: |-
-            SELECT
-              t.name AS "Name",
-              t.value AS "Value"
-            FROM
-              testtable t
+        SELECT
+          t.name AS "Name",
+          t.value AS "Value"
+        FROM
+          testtable t
   - LinkQuick:
       type: 1D
       roles: SystemDeveloper
