--- a/server/context.yaml
+++ b/server/context.yaml
@@ -2,6 +2,7 @@ name: be5-server
 context:
   components:
   - appInfo:          com.developmentontheedge.be5.components.ApplicationInfoComponent
+  - userInfo:         com.developmentontheedge.be5.components.UserInfoComponent
   - document:         com.developmentontheedge.be5.components.Document
   - form:             com.developmentontheedge.be5.components.Form
   - languageSelector: com.developmentontheedge.be5.components.LanguageSelector
