deploy nexus.dote.ru

--- a/entitygen/pom.xml
+++ b/entitygen/pom.xml
@@ -2,7 +2,6 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.developmentontheedge.be5</groupId>
 	<artifactId>be5-entity-gen</artifactId>
 	<version>0.1.0</version>
 	<packaging>jar</packaging>
@@ -10,19 +9,19 @@
 	<name>be5 entity generation</name>
 	<description>Maven plug-ins for be5</description>
 
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
-	</properties>
+  <parent>
+    <groupId>com.developmentontheedge</groupId>
+    <artifactId>be5</artifactId>
+    <version>0.0.3-SNAPSHOT</version>
+  </parent>
 
 	<dependencies>
 
-        <dependency>
-            <groupId>com.developmentontheedge.be5.modules</groupId>
-            <artifactId>be5-modules-core</artifactId>
-            <version>0.1.0</version>
-        </dependency>
+    <dependency>
+        <groupId>com.developmentontheedge.be5.modules</groupId>
+        <artifactId>be5-modules-core</artifactId>
+        <version>0.1.0</version>
+    </dependency>
 
 		<dependency>
 			<groupId>com.developmentontheedge</groupId>
