--- a/server/pom.xml
+++ b/server/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<artifactId>be5-server</artifactId>
-	<version>0.1.1</version>
+	<version>0.1.2-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>be5 server</name>
@@ -12,7 +12,7 @@
 	<parent>
 		<groupId>com.developmentontheedge</groupId>
 		<artifactId>be5</artifactId>
-		<version>0.0.2</version>
+		<version>0.0.3-SNAPSHOT</version>
 	</parent>
 
 	<properties>
@@ -26,13 +26,13 @@
 		<dependency>
 			<groupId>com.developmentontheedge</groupId>
 			<artifactId>be5-metadata</artifactId>
-			<version>0.3.0</version>
+			<version>0.3.1-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.developmentontheedge</groupId>
 			<artifactId>beans-json</artifactId>
-			<version>1.0.0</version>
+			<version>1.0.1-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
