--- a/dbms/pom.xml
+++ b/dbms/pom.xml
@@ -12,7 +12,7 @@
  <parent>
   <groupId>com.developmentontheedge</groupId>
   <artifactId>be5</artifactId>
-  <version>0.0.2</version>
+  <version>0.0.3-SNAPSHOT</version>
  </parent>
 
  <dependencies>
