--- a/metadata/pom.xml
+++ b/metadata/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<artifactId>be5-metadata</artifactId>
-	<version>0.3.0</version>
+	<version>0.3.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>be5 metadata</name>
@@ -12,7 +12,7 @@
 	<parent>
 		<groupId>com.developmentontheedge</groupId>
 		<artifactId>be5</artifactId>
-		<version>0.0.2</version>
+		<version>0.0.3-SNAPSHOT</version>
 	</parent>
 
 	<properties>
@@ -25,7 +25,7 @@
 		<dependency>
 			<groupId>com.developmentontheedge</groupId>
 			<artifactId>beans</artifactId>
-			<version>[3.0,)</version>
+			<version>3.0.4-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
